# gridzbotz

./:  [Content continues but truncated for space - the file is too long]  .env.bak  .env.example  .gitignore  .gitignore.bak  CHANGELOG_V3.6.md  Cargo.toml  Cargo.toml.bak  PRODUCTION_READINESS.md  apply_fixes.sh  build_output.txt  debug_output.txt  hermes_debug.txt  hermes_response.json  nohup.out  package-lock.json  package.json  pyth_proxy.js  quick_fix.patch  test_output.txt  test_parse.sh
.cargo/: config.toml
.github/: INTEGRATION_COMPLETE.md
.github/workflows/: ci.yml
config/: live_test.toml  master.toml  mod.rs  orchestrator.toml  overnight_aggressive.toml  overnight_balanced.toml  overnight_conservative.toml  overnight_multi_strategy.toml  overnight_testing.toml
config/archive/: README.md  overnight.toml
config/battle-royale-v6/: adaptive-hunter.toml  max-levels-titan.toml  mean-reversion.toml  momentum-rider.toml  night-owl.toml  no-gate-yolo.toml  scalper-pro.toml
config/bots/: sol-usdc-grid-01.toml  sol-usdc-grid-02.toml
config/elite/: night_owl.toml  volatility_farmer.toml
config/optimized/: adaptive-hybrid-mar2-2026.toml  balanced-v4.1.toml  balanced_v4.1.toml  balanced_v4.toml  conservative-v4.1.toml  conservative_v4.1.toml  conservative_v4.toml  multi-v5-ai.toml  multi_strategy_v5_ai_ultimate.toml  tuned-mar2-2026.toml
config/production/: README.md  aggressive.toml  balanced.toml  balanced.toml.bak  conservative.toml  conservative.toml.bak  mainnet-sol-usdc-v1.toml  mainnet-sol-usdc-v1.toml.bak  mainnet-sol-usdc-v1.toml.broken  mainnet-sol-usdc-v3.6-enhanced.toml  mainnet-sol-usdc-v3.7.secrets.toml.template  mainnet-sol-usdc-v3.7.toml  mainnet-sol-usdc-v3.8.toml  mainnet-sol-usdc-v4.0.toml  multi_strategy.toml  ultra_aggressive.toml  ultra_aggressive.toml.bak
config/rd/: README.md  multi-strategy-profile.toml  scalper-profile.toml
config/strategies/: aggressive.toml  multi_strategy.toml
config/testing/: development.toml  smoke_test.toml
docs/: CHANGELOG_V3.6.md  ENHANCEMENTS_V3.6_INTEGRATION.md  MULTI_BOT_DEPLOYMENT.md  PHASE3_AI_OPTIMIZATION.md  PRE_DEPLOY_CHECKLIST.md  QUICKSTART_V3.6_FIXES.md  STRATEGY_COMPARISON.md  TELEGRAM_SETUP.md
docs/analysis/: BATTLE_ROYALE_3_RESULTS.md
docs/test-reports/: TEST_REPORT_20251018_OVERNIGHT.md
examples/: master_giga.rs  paper_trading_demo.rs
examples/archive/: config_test.rs  debug_http.rs  debug_pyth.rs  debug_websocket.rs  extended_test.rs  giga_test.rs  giga_ultra_mega_test.rs  multi_strategy_demo.rs  one_hour_pyth_test.rs  profile_test.rs  rebalancing_test.rs  strategy_comparison.rs  test_websocket.rs
examples/tools/: auto_optimizer.rs  full_trading_system.rs  live_dashboard.rs
results/: dashboard_20251016_001729.html  dashboard_20251016_001900.html  dashboard_20251016_002933.html  dashboard_20251016_003320.html  dashboard_20251016_003859.html  dashboard_20251016_010513.html  dashboard_20251016_090814.html  giga_test_20251015_052652.csv  giga_test_20251015_052652.json  giga_test_20251015_052652_summary.txt  giga_v25_test_20251015_233455.csv  giga_v25_test_20251015_233455.json  giga_v25_test_20251015_233455_summary.txt  giga_v25_test_20251015_234229.csv  giga_v25_test_20251015_234229.json  giga_v25_test_20251015_234229_summary.txt  giga_v25_test_20251016_090245.csv  giga_v25_test_20251016_090245.json  giga_v25_test_20251016_090245_summary.txt  giga_v2_test_20251015_125258.csv  giga_v2_test_20251015_125258.json  giga_v2_test_20251015_125258_summary.txt  giga_v2_test_20251015_192927.csv  giga_v2_test_20251015_192927.json  giga_v2_test_20251015_192927_summary.txt  giga_v2_test_20251015_213907.csv  giga_v2_test_20251015_213907.json  giga_v2_test_20251015_213907_summary.txt  optimizer_analysis_20251015_234344.txt  optimizer_analysis_20251015_235357.txt  optimizer_analysis_20251016_090743.txt
results/overnight_20251017_233815/: aggressive.txt  balanced.txt  conservative.txt  multi_strategy.txt  super_aggressive.txt  testing.txt  ultra_aggressive.txt
results/test_20251017_233740/: balanced.txt
results/ultimate_20251018_003459/: aggressive.txt  balanced.txt  conservative.txt
scripts/: LAUNCH_ALL_10_NOW.sh  analyze_battle.py  analyze_br3.sh  analyze_detailed.py  analyze_results.sh  apply_deny_unknown_fields.py  battle-royale-v6-launch.sh  battle-royale-v6-monitor.sh  battle-royale-v6-results.sh  battle-royale-v6-stop.sh  battle_royale_3.sh  battle_royale_3_parallel.sh  cleanup_and_organize.sh  config_battle.sh  deep_analysis.sh  extract_results.sh  extract_trade_metrics.sh  generate_dashboard.py  get_devnet_funds.sh  kill_all_bots.sh  launch_NOW.sh  launch_battle_royale.sh  launch_championship_10.sh  launch_console.sh  launch_overnight_suite.sh  launch_ultimate_suite.sh  live_monitor.sh  mainnet-launcher.sh  monitor_battle.sh  monitor_suite.sh  pre_championship_clean_build.sh  preflight_check.sh  quick_summary.sh  quick_test_parallel.sh  quick_test_suite.sh  test_websocket.sh  validate_5min.sh  validate_configs.sh  verify_configs.sh  watch_battle.sh
scripts/config/: setup_dev_environment.sh
src/: .env.example  config_audit.rs  config_cli.rs  health.rs  lib.rs  main.rs  main.rs.bak  main.rs.orig  metrics.rs
src/bots/: bot_trait.rs  grid_bot.rs  grid_bot_ai_integration.md  mod.rs  orchestrator.rs  performance_integration.rs
src/config/: adaptive_optimizer.rs  builder.rs  execution.rs  feed_ids.rs  fees.rs  loader.rs  mod.rs  network.rs  observability.rs  priority_fees.rs  risk.rs  secrets.rs  security.rs  strategies.rs  trading.rs
src/dex/: jupiter_client.rs  market_state.rs  mod.rs  order_manager.rs  serum_client.rs
src/indicators/: atr.rs  ema.rs  macd.rs  mod.rs  sma.rs  volatility.rs
src/metrics/: mod.rs  performance.rs  trade_logger.rs
src/risk/: circuit_breaker.rs  mod.rs  position_sizer.rs  stop_loss.rs  win_rate_guard.rs
src/rpc/: fee_source.rs  hornet_production.rs  mod.rs
src/security/: keystore.rs  mod.rs
src/strategies/: arbitrage.rs  consensus.rs  consensus_wma.rs  fee_filter.rs  grid_rebalancer.rs  mean_reversion.rs  mod.rs  (+6 more)
tests/: integration_tests.rs
(+79 files in other folders)
